// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuideAnchor renders 1`] = `
<GuideAnchorContainer
  innerRef={[Function]}
  type="text"
>
  <StyledGuideAnchor
    active={false}
    className="guide-anchor-ping target 1"
  >
    <StyledGuideAnchorRipples />
  </StyledGuideAnchor>
</GuideAnchorContainer>
`;

exports[`GuideAnchor turns active when guide state changes 1`] = `
<GuideAnchorContainer
  innerRef={[Function]}
  type="text"
>
  <StyledGuideAnchor
    active={true}
    className="guide-anchor-ping target 1"
  >
    <StyledGuideAnchorRipples />
  </StyledGuideAnchor>
</GuideAnchorContainer>
`;
